Fixing address spacing

--- a/assets/css/rwp-public.css
+++ b/assets/css/rwp-public.css
@@ -17,10 +17,10 @@ html{
 
 .address-line .address-item{
     display:inline-block;
-    margin-right:var(--bs-default-space);
+    margin-right:var(--bs-spacer-default);
 }
 .address-line .address-item.address-item-separator{
-    margin-left:calc(-1 * var(--bs-default-space));
+    margin-left:calc(-1 * var(--bs-spacer-default));
 }
 
 html{
