--- a/src/css/public/_locations.scss
+++ b/src/css/public/_locations.scss
@@ -9,10 +9,10 @@
 .address-line {
 	.address-item {
 		display: inline-block;
-		margin-right: cssvar(default-space);
+		margin-right: cssvar(spacer-default);
 
 		&.address-item-separator {
-			margin-left: calc(-1 * #{cssvar(default-space)});
+			margin-left: calc(-1 * #{cssvar(spacer-default)});
 		}
 	}
 }
